--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Josef | Full Stack Developer</title>
 
-		<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/320/320368.png" type="image/x-icon" />
+		<link rel="icon" href="assets/Developer.JPG" type="image/x-icon" />
 
 		<link rel="stylesheet" href="styles.css" />
 	</head>
@@ -14,7 +14,7 @@
 		<div class="waveWrapper waveAnimation">
 			<div class="blur-body">
 				<div class="container">
-					<div class="avatar"></div>
+					<a href="view.html"><div class="avatar"></div></a>
 
 					<div class="box">
 						<div class="title">
