--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
 						<div class="role">
 							<div class="block"></div>
-							<p>Full Stack Developer</p>
+							<p>Backend Developer</p>
+						</div>
+
+						<div class="role">
+							<div class="block"></div>
+							<p>@Rankacy</p>
 						</div>
 					</div>
 				</div>
